--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -3,9 +3,15 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer utilities {
-    .text-gradient {
-      background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-  }
+html {
+    height: 100%;
+}
+
+
+body {
+	height: 100%;
+	margin: 0;
+	padding: 0;
+  position: relative;
+}
+
